# claverica-backend

./: .env  .env.example  .gitattributes  .gitignore  ADMIN_FIXES_MARKER.txt  COMMIT_MESSAGE.txt  DATABASE_FIXES_SUMMARY.md  DATABASE_FIX_SUMMARY.md  DEPLOYMENT_TEST.md  DEPLOY_NOW_20260210-153045.txt  Dockerfile  FINAL_FIX_CONFIRMATION.txt  FINAL_TIMESTAMP.txt  FORCE_DEPLOY.txt  FORCE_PUSH.md  FORCE_VICTORY.txt  Procfile  README_VISIBLE_CHANGE.md  ULTIMATE_VICTORY.md  VICTORY_1768911552.md  VISIBLE_CHANGES_README.md  VISIBLE_DEPLOYMENT_README.md  check_account_fields.py  check_api_endpoints.py  check_apps.py  check_auth.py  check_database.py  check_db.py  check_db_fixed.py  check_db_state.py  check_deployment.ps1  check_django.py  check_django_tasks.py  check_imports.py  check_init.py  check_manage.py  check_missing.py  check_path.py  check_settings.py  check_status.ps1  (+154 more)
Tasks/: INSTALLATION INSTRUCTIONS  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
Transfers/: serializers.py  tests.py  urls.py  views.py
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/: .env.example  Dockerfile  Folder Structure  MARKER_FILE_VISIBLE_CHANGE.txt  Procfile  README.md  __init__.py  admin.py  api_urls.py  apps.py  asgi.py  authentication.py  build.sh  check_all_apps.py  check_all_apps_fixed.py  check_data.py  check_db.py  check_email_config.py  check_indexes.py  check_migrations.py  consumers.py  context_processors.py  correct_fix.py  create_wallets_migration.py  database_fixes_applied.txt  db_utils.py  fix_all.py  (+88 more)
(+511 files in other folders)
