[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "claverica-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.2.7"
whitenoise = "6.11.0"
gunicorn = "23.0.0"
# Add all other dependencies

[tool.poetry.scripts]
start = "gunicorn backend.wsgi:application"

# Tell Poetry NOT to create virtual environment
[tool.poetry.virtualenvs]
create = false

# Disable Poetry's default build
[tool.render]
prefer-setuptools = true